test/should-fail/语句必须写在函数内.j
function test takes nothing returns nothing
endfunction
call test()